--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ventas
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE220.jar=C:\\Users\\Docente\\Documents\\NetBeansProjects\\SwingInspire\\src\\libs\\AbsoluteLayout-RELEASE220.jar
 file.reference.gson-2.8.5.jar=src\\pe\\edu\\utp\\ventas\\libs\\gson-2.8.5.jar
 file.reference.lombok.jar=src\\pe\\edu\\utp\\ventas\\libs\\lombok.jar
 file.reference.mysql-connector-java-8.0.28.jar=src\\pe\\edu\\utp\\ventas\\libs\\mysql-connector-java-8.0.28.jar
@@ -43,7 +44,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.lombok.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE220.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
